src/App.css
/* General styling */
body {
	font-family: "Ubuntu", sans-serif;
	color: black;
	background-color: #e8e9f3;
	font-size: 25px;
	text-align: center;

	background: linear-gradient(45deg, #d9a7c7, #fffcdc);
	background-size: 600% 100%;
	animation: gradient 12s linear infinite;
	animation-direction: alternate;
}

a {
	text-decoration: none;
	transition-duration: 0.4s;
	color: black;
}

a:visited {
	text-decoration: none;
	color: black;
}

a:hover {
	transition: 0.4s ease-in-out;
	color: #bd0f43;
}

#title {
	display: inline-block;
	padding-bottom: 2%;
}

/* Panel styling */
.panels-container {
	display: grid;
}

#title,
#panel-title,
#panel-subheading {
	font-family: "Sansita Swashed", cursive;
	text-decoration: none;
	margin: 0 auto;
}

#panel-title {
	font-size: 55px;
	padding-bottom: 2%;
}

#panel {
	margin: 0 auto;
	padding: 1% 0 2% 0;
	height: fit-content;
	max-width: 80%;
	background: rgba(255, 255, 255, 0.375);
	box-shadow: 0 0.75rem 2rem 0 rgba(0, 0, 0, 0.1);
	border-radius: 2rem;
	border: 1px solid rgba(255, 255, 255, 0.125);
}

.grid-container {
	display: grid;
	margin: 0 1%;
	grid-template-columns: 1.1fr 0.9fr;
	grid-template-rows: 0.5fr 1fr;
	gap: 0px 0px;
	grid-template-areas:
		"citypic-panel like-panel"
		"info-panels interaction-panels";
}

.info-panels {
	display: grid;
	grid-template-columns: 1fr 1fr;
	grid-template-rows: 1fr;
	gap: 0px 0px;
	grid-template-areas: "article-panel tripmap-panel";
	grid-area: info-panels;
}

.interaction-panels {
	display: grid;
	grid-template-columns: 1fr 1fr;
	grid-template-rows: 1fr;
	gap: 0px 0px;
	grid-template-areas: "weather-panel userinfo-panel";
	grid-area: interaction-panels;
}

/* City Profile pic Styling*/
.citypic-panel {
	grid-area: citypic-panel;
}
#citypic {
	max-width: 99%;
	height: fit-content;

	box-shadow: 0 1px 6px 0 rgba(31, 38, 135, 0.37);
	backdrop-filter: blur(10.5px);
	-webkit-backdrop-filter: blur(10.5px);
	border-radius: 10px;
	border: 1px solid rgba(0, 0, 0, 0.18);
}

/* Article Styling */
.article-panel {
	margin: 2%;
	padding: 1%;
	height: fit-content;

	border-radius: 4px;
	/*     border: 5px solid rgb(0, 255, 255); */
	grid-area: article-panel;

	box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
	backdrop-filter: blur(10.5px);
	-webkit-backdrop-filter: blur(10.5px);
	border-radius: 10px;
	border: 5px solid rgba(0, 255, 255, 0.18);
}

/* TripMap Styling */
.tripmap-panel {
	margin: 2%;
	padding: 1%;
	height: fit-content;

	border-radius: 4px;
	/*     border: 5px solid rgb(0, 255, 34); */
	grid-area: tripmap-panel;

	box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
	backdrop-filter: blur(10.5px);
	-webkit-backdrop-filter: blur(10.5px);
	border-radius: 10px;
	border: 5px solid rgba(0, 255, 34, 0.18);
}

/* Weather Styling */
.weather-panel {
	margin: 2%;
	padding: 3%;
	height: fit-content;
	grid-area: weather-panel;

	box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
	backdrop-filter: blur(10.5px);
	-webkit-backdrop-filter: blur(10.5px);
	border-radius: 10px;
	border: 1px solid rgba(255, 255, 255, 0.18);
}
#weather-left {
	margin-left: 3px;
	text-align: left;
	font-size: 16px;
	float: left;
}
#weather-icon {
	font-size: 100px;
	margin: 3%;
}
#temp {
	margin: 0;
	font-size: 40px;
}
#weather-highlow p {
	margin: 0;
	display: inline;
	font-size: 16px;
}
#weather-feels-like {
	margin: 0;
	font-size: 16px;
}
#weather-desc {
	margin: 0;
	font-size: 19px;
}
#weather-clouds {
	margin: 0;
	font-size: 18px;
}
#weather-humidity {
	margin: 0;
	font-size: 18px;
}
#cold {
	background: rgba(109, 169, 244, 0.65);
}
#cool {
	background: rgba(109, 244, 227, 0.65);
}
#average {
	background: rgba(109, 244, 123, 0.65);
}
#warm {
	background: rgba(255, 103, 11, 0.65);
}
#hot {
	background: rgba(255, 0, 0, 0.65);
}

/* Like/Dislike Styling */
.like-panel {
	margin: auto;
	padding: 3%;
	width: 50%;
	height: fit-content;

	grid-area: like-panel;
	box-shadow: 0 1px 6px 0 rgba(31, 38, 135, 0.37);
	backdrop-filter: blur(10.5px);
	-webkit-backdrop-filter: blur(10.5px);
	border-radius: 10px;
	border: 1px solid rgba(0, 0, 0, 0.18);
}
#dislike-button {
	margin: 2%;

	background: rgba(255, 255, 255, 0.2);
	box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
	backdrop-filter: blur(4px);
	-webkit-backdrop-filter: blur(4px);
	border-radius: 10px;
	border: 1px solid rgba(255, 255, 255, 0.18);
}
#dislike-button:hover {
	transform: scale(1.11);
	background: #6a4949;
	cursor: pointer;
	color: white;
}

#like-icon {
	color: red;
}

#like-button {
	margin: 2%;

	background: rgba(255, 255, 255, 0.2);
	box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
	backdrop-filter: blur(4px);
	-webkit-backdrop-filter: blur(4px);
	border-radius: 10px;
	border: 1px solid rgba(255, 255, 255, 0.18);
}
#like-button:hover {
	transform: scale(1.11);
	background: #bd0f43;
	cursor: pointer;
	color: white;
}

#dislike-icon {
	color: red;
}

/* UserInfo Styling */
.userinfo-panel {
	margin: 2%;
	padding: 3%;
	height: fit-content;

	grid-area: userinfo-panel;
	box-shadow: 0 1px 6px 0 rgba(31, 38, 135, 0.37);
	backdrop-filter: blur(10.5px);
	-webkit-backdrop-filter: blur(10.5px);
	border-radius: 10px;
	border: 1px solid rgba(0, 0, 0, 0.18);
}
#profile-pic {
	max-width: 75px;
	border-radius: 10px;
	margin: 1%;
}

/* Button Styling */
.button {
	font-family: "Dela Gothic One", cursive;
	transition-duration: 0.4s;
	text-align: center;
	display: inline-block;
	font-size: 18px;
	padding: 3% 5%;

	background: rgba(0, 0, 0, 0.88);
	box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
	backdrop-filter: blur(16px);
	-webkit-backdrop-filter: blur(16px);
	border-radius: 10px;
	border: 1px solid rgba(255, 255, 255, 0.18);
}
.button:hover {
	background-color: #bd0f43;
	cursor: pointer;
	color: white;
}
#button-link {
	color: white;
	text-decoration: none;
	transition-duration: 0.4s;
	margin: 0 auto;
}

/* Gradient Styling */
@keyframes gradient {
	0% {
		background-position: 0%;
	}
	25% {
		background-position: 25%;
	}
	50% {
		background-position: 50%;
	}
	75% {
		background-position: 75%;
	}
	100% {
		background-position: 100%;
	}
}

/* Responsive styling */
@media screen and (max-width: 950px) {
	.grid-container {
		display: grid;
		grid-template-columns: 1fr;
		grid-template-rows: max-content;
		padding: 3% 1%;
		grid-template-areas:
			"citypic-panel"
			"like-panel"
			"info-panels"
			"interaction-panels";
	}
}

@media screen and (max-width: 400px) {
	#citypic {
		max-width: 66%;
	}
	#panel {
		max-width: 100%;
	}
}

